Changes:  - Snapshot and Snapshots comparator interface finished.